style borders and add in cells to create spacing

--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -71,6 +71,6 @@ sup {
 }
 
 .header-border {
-  border-top: 2px solid black;
-  border-bottom: 3px solid black;
+  // border-top: 3px solid black;
+  border-bottom: 3px solid $iron;
 }
