--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -10,7 +10,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (min-height: 520px) {
   .sticky {
     position: sticky;
     top: 0;
