--- a/_includes/alerts/latest-not-latest.html
+++ b/_includes/alerts/latest-not-latest.html
@@ -14,7 +14,7 @@
     <div class="col-wrap">
       <div class="col">
         <div class="release-data">
-          <p class="panel panel-small background--0 font-xsmall"><span class="font-weight--bold">This is not the latest</span><span class="pipe font-weight--normal"> | </span> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal font-xsmall">view the latest collection</a></p>
+          <p class="panel panel-small background--0 font-xsmall"><span class="font-weight--bold">This is not the latest</span><span class="pipe font-weight--normal"> | </span> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal font-xsmall">view the latest crime collection</a></p>
         </div>
       </div>
     </div>
