--- a/_sass/_inset-text.scss
+++ b/_sass/_inset-text.scss
@@ -1,10 +1,6 @@
 .inset-text {
-
-  p {
-    margin-bottom: $spacing-unit*2;
-  }
-
-  display: inline-block;
+  margin-bottom: $spacing-unit*2;
+  // display: inline-block;
 
   .panel {
       border-left: 10px solid $gallery;
@@ -12,10 +8,9 @@
       padding-right: $spacing-unit*2;
       padding-top: $spacing-unit*2;
       padding-bottom: $spacing-unit*2;
+      margin-bottom: 0;
   }
   @media (min-width: 768px){
-    p {
       margin-bottom: $spacing-unit*4;
-    }
   }
 }
