--- a/_layouts/prototype.html
+++ b/_layouts/prototype.html
@@ -11,7 +11,11 @@
       {% include banners/warning.html %}
     {% endif %}
 
-    {% include header.html %}
+    {% if page.header != false %}
+      {% include header.html %}
+    {% endif %}
+
+
 
     {{ content }}
 
