--- a/_sass/_colours.scss
+++ b/_sass/_colours.scss
@@ -75,5 +75,5 @@ $link-hover-colour: #2B8CC4;
 
 // white circle border
 .background--white {
-  border: 1px solid #DDDDDD;
+  // border: 1px solid #DDDDDD;
 }
