--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -24,11 +24,11 @@ a:hover {
 }
 
 .astral-link, .astral-link:visited {
-  color: $haze;
+  color: $white;
 }
 
 a.astral-link:hover {
-  color: $haze;
+  color: $white;
   opacity: 0.7;
 }
 
