--- a/_sass/_breadcrumbs.scss
+++ b/_sass/_breadcrumbs.scss
@@ -1,3 +1,30 @@
+.breadcrumb__list {
+  padding-left: 0;
+  margin-top: $spacing-unit*2;
+  margin-bottom: $spacing-unit*2;
+}
+
+.breadcrumb__item, .breadcrumb__item__white  {
+  display: none;
+  background-image: url(../assets/img/chevron-icon.svg);
+  background-size: 12px 14px;
+  background-repeat: no-repeat;
+  background-position: left center;
+  padding-left: 16px;
+  padding-bottom: 4px;
+  line-height: 1.2;
+  margin-right: 2px;
+}
+
+.breadcrumb__item__white  {
+  background-image: url(../assets/img/chevron-icon-white.svg);
+}
+
+.breadcrumb__item:nth-last-child(1), .breadcrumb__item__white:nth-last-child(1) {
+  display: inline;
+  background-image: url(../assets/img/chevron-icon-white-left.svg);
+}
+
 .breadcrumb {
   li {
       font-size: 16px;
@@ -5,47 +32,29 @@
   a {
       font-size: 16px;
   }
-
   border-bottom:none;
   padding: 0;
 }
 
-.breadcrumb__list {
-  padding-left: 0;
-  margin-top: $spacing-unit*2;
-  margin-bottom: $spacing-unit*2;
-}
+@media (min-width: 768px) {
 
-.breadcrumb__item {
-  background-image: url(../assets/img/chevron-icon.svg);
-  background-size: 12px 14px;
-  background-repeat: no-repeat;
-  background-position: right center;
-  //padding-right: 22px;
-  padding-right: 16px;
-  padding-bottom: 4px;
-  line-height: 1.2;
-  display: inline;
-  margin-right: 2px;
-}
+  .breadcrumb__item, .breadcrumb__item__white {
+    display: inline;
+    background-position: right center;
+    padding-right: 16px;
+    padding-left: 0;
+  }
 
-.breadcrumb__item__white {
-  background-image: url(../assets/img/chevron-icon-white.svg);
-  background-size: 12px 14px;
-  background-repeat: no-repeat;
-  background-position: right center;
-  //padding-right: 22px;
-  padding-right: 16px;
-  padding-bottom: 4px;
-  line-height: 1.2;
-  display: inline;
-  margin-right: 2px;
-}
+  .breadcrumb__item::after {
+    content: none;
+  }
 
-.breadcrumb__item::after {
-  content: none;
-}
+  .breadcrumb__item:last-child {
+    background-image: none;
+  }
 
-.breadcrumb__item:last-child {
-  background-image: none;
+  .breadcrumb__item__white:last-child {
+    background-image: none;
+  }
+
 }
