--- a/_sass/_breadcrumbs.scss
+++ b/_sass/_breadcrumbs.scss
@@ -12,7 +12,7 @@
   background-position: left center;
   padding-left: 16px;
   padding-bottom: 3px;
-  line-height: 1.2;
+  line-height: 24px;
   margin-right: 2px;
 }
 
