--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -79,11 +79,12 @@ a {
 .heading-xlarge,
 h1 {
   font-size: 32px;
-  line-height: 1.3;
+  line-height: 40px;
   margin: 16px 0 24px 0;
   @media (min-width: 768px) {
     font-size: 38px;
     margin: 32px 0 32px 0;
+    line-height: 48px;
   }
 }
 
@@ -101,11 +102,13 @@ h2 {
 .font-medium,
 .heading-medium,
 h3 {
-  font-size: 19px;
+  font-size: 20px;
   margin: 24px 0 16px 0;
+  line-height: 32px;
   @media (min-width: 768px) {
     font-size: 24px;
     margin: 32px 0 32px 0;
+    line-height: 32px;
   }
 }
 
@@ -114,9 +117,11 @@ h3 {
 h4 {
   font-size: 16px;
   margin: 16px 0 16px 0;
+  line-height: 24px;
   @media (min-width: 768px) {
     font-size: 18px;
     margin: 24px 0 16px 0;
+    line-height: 32px;
   }
 }
 
@@ -124,9 +129,11 @@ h4 {
 .heading-xsmall,
 h5 {
   font-size: 14px;
+  line-height: 24px;
   margin-bottom: $spacing-unit;
   @media (min-width: 768px) {
     font-size: 16px;
+    line-height: 32px;
     margin-bottom: $spacing-unit*3;
   }
 }
@@ -135,8 +142,10 @@ h5 {
 .heading-xxsmall,
 h6 {
   font-size: 14px;
+  line-height: 24px;
   @media (min-width: 768px) {
     font-size: 14px;
+    line-height: 24px;
   }
 }
 
