--- a/_sass/_warning-text.scss
+++ b/_sass/_warning-text.scss
@@ -2,11 +2,16 @@
   font-size: 16px;
   line-height: 1.31579;
   position: relative;
-  padding: 4px 0;
+  padding: 10px 0;
   margin-bottom: 24px;
   @media (min-width: 768px){
     margin-bottom: 32px;
   }
+}
+
+.warning-text--small {
+  padding: 12px 0;
+  line-height: 1.25;
 }
 
 .warning-text__icon {
@@ -15,43 +20,33 @@
   position: absolute;
   top: 50%;
   left: 0;
-  min-width: 30px;
-  min-height: 30px;
-  margin-top: -15px;
-  // padding-top: 3px;
-  // border: 3px solid #0b0c0c;
+  padding-top: 3px;
+  min-width: 38px;
+  min-height: 38px;
+  margin-top: -20px;
+  font-size: 1.8em;
   border-radius: 50%;
   color: #fff;
   background: #0b0c0c;
-  font-size: 1.2em;
   line-height: 29px;
   text-align: center;
   user-select: none;
 }
 
-.warning-text-large__icon {
-  // border: 3px solid #0b0c0c;
-  min-width: 38px;
-  min-height: 38px;
-  line-height: 38px;
-  margin-top: -20px;
-  font-size: 1.6em;
-}
-
 .warning-text__text {
   display: block;
   margin-left: -15px;
-  padding-left: 55px;
-  font-weight: bold;
-}
-
-.warning-text-large__text {
   font-size: 16px;
-  padding-left: $spacing-unit*9;
+  padding-left: 72px;
 
   @media (min-width: 768px){
     font-size: 19px;
   }
+}
+
+.warning-text__text--small {
+  font-size: 14px;
+  padding-left: 64px;
 }
 
 .warning-text__assistive {
