Amend warning text so that it has a border

--- a/_sass/_warning-text.scss
+++ b/_sass/_warning-text.scss
@@ -20,11 +20,12 @@
   position: absolute;
   top: 50%;
   left: 0;
-  padding-top: 3px;
+  padding-top: 1px;
   min-width: 38px;
   min-height: 38px;
-  margin-top: -20px;
+  margin-top: -19px;
   font-size: 1.8em;
+  border: 3px solid #0b0c0c;
   border-radius: 50%;
   color: #fff;
   background: #0b0c0c;
