--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -190,22 +190,17 @@ h2 {
   }
 }
 
-// h2 + h4 {
-//   margin: 0 0 16px 0;
-//   @media (min-width: 768px) {
-//     margin: 0 0 16px 0;
-//   }
-// }
-
 .font-medium,
 .heading-medium,
 h3 {
   font-size: 18px;
   line-height: 24px;
   margin: 24px 0 16px 0;
+  padding: 0;
   @media (min-width: 768px) {
     font-size: 24px;
     line-height: 32px;
+    padding: 0;
     margin: 32px 0 16px 0;
   }
 }
