--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -196,11 +196,9 @@ h3 {
   font-size: 18px;
   line-height: 24px;
   margin: 24px 0 16px 0;
-  padding: 0;
   @media (min-width: 768px) {
     font-size: 24px;
     line-height: 32px;
-    padding: 0;
     margin: 32px 0 16px 0;
   }
 }
@@ -232,7 +230,7 @@ h5 {
 
 h5.chart-subtitle {
   font-weight: normal;
-  padding: 0;
+  // padding: 0;
 }
 
 .font-xsmall,
