--- a/_includes/accordian.html
+++ b/_includes/accordian.html
@@ -1,7 +1,7 @@
 <div class="js-show-hide">
 <div class="show-hide show-hide--light background--gallery margin-bottom--2">
     <div class="js-show-hide__title">
-      <p class="heading-small">
+      <p class="font-normal" style="font-weight: 700;">
         What do you need to know about these numbers?</p>
     </div>
     <div class="js-show-hide__content" style="overflow: auto;">
