--- a/_includes/headline.html
+++ b/_includes/headline.html
@@ -3,7 +3,7 @@
   <div class="js-show-hide headline">
     <div class="show-hide show-hide--light">
       <div class="js-show-hide__title headline-title">
-        <p class="heading-small">
+        <p class="heading-normal" style="font-weight: 700;">
           Knife crime reaches a seven-year-high</p>
       </div>
       <div class="js-show-hide__content headline-content" style="overflow: auto;">
@@ -21,7 +21,7 @@
   <div class="js-show-hide">
     <div class="show-hide show-hide--light">
       <div class="js-show-hide__title headline-title">
-        <p class="heading-small">
+        <p class="heading-normal" style="font-weight: 700;">
           Knife crime reaches a seven-year-high</p>
       </div>
       <div class="js-show-hide__content headline-content" style="overflow: auto;">
