Table of contents spike

--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -109,7 +109,7 @@ summary:focus {
   }
 
 .section-contents li:before {
-  content: "–";
+  content: "-";
   float: left;
   display: block;
   width: 16px;
