--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -7,7 +7,7 @@ caption {
 td,
 th {
   border-bottom: 1px solid $iron;
-  text-align: left;
+  // text-align: left;
   line-height: 1.3;
   padding: 0.8em 1em 0.8em 0;
 }
@@ -68,6 +68,11 @@ sup {
   .row-bold {
     font-weight: bold;
   }
+}
+
+.align-right {
+  text-align: right;
+  padding-right: $spacing-unit;
 }
 
 .header-border {
