--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -79,3 +79,18 @@ sup {
   // border-top: 3px solid black;
   border-bottom: 3px solid $iron;
 }
+
+table thead tr{
+  display:block;
+}
+
+table th,table td{
+  width:150px;//fixed width
+}
+
+
+table  tbody{
+display:block;
+height:400px;
+overflow:auto;//set tbody to auto
+}
